--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "aos": "^2.3.4"
+    "aos": "^2.3.4",
+    "inputmask": "^5.0.8",
+    "just-validate": "^4.3.0"
   }
 }
